# mechbase

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-vps.yml
app/api/: auth.py  main.py
app/rag/: chunking.py  config.py  eval.py  ingest.py  models.py  pdf.py  search.py  sources.py  store.py  voyage_client.py
docs/: AGENT_TOOL_PROMPT.md  API.md
evals/: frc_mechanism_eval.json
tests/: test_api.py  test_chunking.py  test_sources.py
